--- a/index.html
+++ b/index.html
@@ -118,12 +118,18 @@ If we will work inside OST environments, we need to install the OpenStack client
 
 <pre><code>pip install --upgrade python-cinderclient==1.9.0
 pip install --upgrade python-glanceclient==2.5.0
-pip install --upgrade python-heatclient==1.4.0
-pip install --upgrade python-keystoneclient==3.7.0
+pip install --upgrade python-heatclient==1.6.1
+pip install --upgrade python-keystoneclient==3.8.0
 pip install --upgrade python-neutronclient==6.0.0
 pip install --upgrade python-novaclient==6.0.0
-pip install --upgrade python-openstackclient==3.2.0
-pip install --upgrade python-swiftclient==3.1.0
+pip install --upgrade python-openstackclient==3.4.1
+pip install --upgrade python-swiftclient==3.2.0
+pip install --upgrade python-designateclient==2.3.0
+pip install --upgrade python-ironicclient==1.8.0
+pip install --upgrade python-magnumclient==2.3.1
+pip install --upgrade python-mistralclient==2.1.2
+pip install --upgrade python-troveclient==2.6.0
+pip install --upgrade shade==1.13.2
 </code></pre>
 
 <ul>
@@ -231,12 +237,18 @@ pip install pywinrm==${WINRM_VERSION}
 
 pip install --upgrade python-cinderclient==1.9.0
 pip install --upgrade python-glanceclient==2.5.0
-pip install --upgrade python-heatclient==1.4.0
-pip install --upgrade python-keystoneclient==3.7.0
+pip install --upgrade python-heatclient==1.6.1
+pip install --upgrade python-keystoneclient==3.8.0
 pip install --upgrade python-neutronclient==6.0.0
 pip install --upgrade python-novaclient==6.0.0
-pip install --upgrade python-openstackclient==3.2.0
-pip install --upgrade python-swiftclient==3.1.0
+pip install --upgrade python-openstackclient==3.4.1
+pip install --upgrade python-swiftclient==3.2.0
+pip install --upgrade python-designateclient==2.3.0
+pip install --upgrade python-ironicclient==1.8.0
+pip install --upgrade python-magnumclient==2.3.1
+pip install --upgrade python-mistralclient==2.1.2
+pip install --upgrade python-troveclient==2.6.0
+pip install --upgrade shade==1.13.2
 
 pip freeze &gt; $HOME/requirements-ansible-${ANSIBLE_VERSION}-OST-kilo.txt
 
